--- a/Jogo-de-adivinhação/package.json
+++ b/Jogo-de-adivinhação/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jogo-de-adivinha-o": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
